--- a/css/styles.css
+++ b/css/styles.css
@@ -26,13 +26,13 @@ a:active, a:hover {color: #E74C3C;}
   /*overflow: auto;*/
   width: 100%;
   /*clear:both;*/
-  margin: 2rem 0;
+  margin: 1.5rem 0;
 }
 
 .sel {
   color:#2C3E50;
   border:0.15rem solid #2C3E50;
-  padding: 1rem 1rem;
+  padding: .5rem .75rem;
   border-radius:4px;
   margin:.5rem;
   cursor:pointer;
@@ -141,7 +141,7 @@ a.reset:hover {
 
 .download {
   border: none;
-  background-color: #3498DB;
+  background-color: #E74C3C;
   color: #FFF;
   padding: .5rem 2rem;
   width:30%;
