--- a/css/styles.css
+++ b/css/styles.css
@@ -141,7 +141,7 @@ a.reset:hover {
 
 .download {
   border: none;
-  background-color: #E74C3C;
+  background-color: #3498DB;
   color: #FFF;
   padding: .5rem 2rem;
   width:30%;
