--- a/css/styles.css
+++ b/css/styles.css
@@ -21,11 +21,9 @@ a {color: #2980B9;}
 a:active, a:hover {color: #E74C3C;}
 /*a:visited {color: #85144B;}*/
 
-#selectors {
+.btnContainer {
   text-align:center;
-  /*overflow: auto;*/
   width: 100%;
-  /*clear:both;*/
   margin: 1.5rem 0;
 }
 
